Bug 1796516: Fix title overlap in sidepanel in dev catalog

--- a/frontend/public/components/catalog/_catalog.scss
+++ b/frontend/public/components/catalog/_catalog.scss
@@ -206,10 +206,6 @@ $catalog-tile-width: $co-m-catalog-tile-width;
       margin: 0 !important;
     }
 
-    .pf-c-title {
-      margin-right: 0 !important;
-    }
-
     .modal-body-inner-shadow-covers {
       padding-left: 0 !important;
       padding-right: 0 !important;
